--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 </head>
 <body>
 
+    <div>
+        <input type="text" id="cityInput" placeholder="Entrez une ville">
+        <button id="submitCity">Rechercher</button>
+        <button id="refreshWeather">Rafraîchir</button>
+    </div>
     <div id="app"></div>
+    <div id="forecast"></div>
 
 </body>
 <script src="./script.js"></script>
